--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "nuxt-ts build",
     "generate": "nuxt-ts generate",
     "start": "nuxt-ts start",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-nuxt": ">=0.4.2",
     "markdown-it": "^11.0.0",
     "markdown-it-prism": "^2.0.5",
-    "prismjs": "^1.20.0"
+    "prismjs": "^1.20.0",
+    "push-dir": "^0.4.1"
   }
 }
