OOP C casi terminado

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alan-blog",
+  "name": "Alan",
   "version": "1.0.0",
   "description": "My blog",
   "author": "Alan Ramírez Herrera",
