--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "markdown-it": "^11.0.0",
+    "markdown-it-attrs": "^3.0.3",
+    "markdown-it-collapsible": "^1.0.0",
+    "markdown-it-github-headings": "^2.0.0",
+    "markdown-it-named-headings": "^1.1.0",
     "markdown-it-prism": "^2.0.5",
     "prismjs": "^1.20.0",
     "push-dir": "^0.4.1"
