--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,3 +30,11 @@ jobs:
       run: |
         npm install
         npm run generate
+    - name: Release Github Pages
+      uses: igolopolosov/github-action-release-github-pages@master
+      env:
+        GITHUB_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        GITHUB_PAGES_REPO_AUTHOR: Alan5142
+        GITHUB_PAGES_REPO_NAME: alan5142.github.io
+        GITHUB_PAGES_RELEASE_BRANCH: master
+        PROJECT_BUILD_FOLDER: dist
