--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "@nuxtjs/sitemap": "^2.4.0",
     "frontmatter-markdown-loader": "^3.5.0",
     "nuxt": "^2.0.0",
     "nuxt-i18n": "^6.12.2"
